--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
                                 <p>Intermediate</p>
                             </div>
                         </article>
+                         <article>
+                            <img src="checkmark.png" alt="checkmark icon" class="icon" />
+                            <div>
+                                <h3>SQL, PL/SQL</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                         <article>
+                            <img src="checkmark.png" alt="checkmark icon" class="icon" />
+                            <div>
+                                <h3>MongoDB</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
